# fp16_pack

./: .rubocop.yml  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  fp16_pack.gemspec
.github/workflows/: main.yml
ext/fp16_pack/: Cargo.toml  extconf.rb
ext/fp16_pack/src/: lib.rs
lib/: fp16_pack.rb
lib/fp16_pack/: version.rb
sig/: fp16_pack.rbs
spec/: benchmarks.rb  fp16_pack_spec.rb  spec_helper.rb
